feat: adds new handlers for bolotaAigent interactions, improves webhook validation and swagger file updated
